--- a/projects/demo/src/app/data-grid-demo/data-grid-demo.component.html
+++ b/projects/demo/src/app/data-grid-demo/data-grid-demo.component.html
@@ -1,2 +1,3 @@
 <lib-data-grid [dataSource]="dataSource"
+               [enableSelection]="true"
                [columns]="columns"></lib-data-grid>
