--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -11,20 +11,20 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$ng-mat-nav-primary: mat.define-palette(mat.$indigo-palette);
-$ng-mat-nav-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$demo-primary: mat.define-palette(mat.$indigo-palette);
+$demo-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$ng-mat-nav-warn: mat.define-palette(mat.$red-palette);
+$demo-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$ng-mat-nav-theme: mat.define-light-theme(
+$demo-theme: mat.define-light-theme(
   (
     color: (
-      primary: $ng-mat-nav-primary,
-      accent: $ng-mat-nav-accent,
-      warn: $ng-mat-nav-warn,
+      primary: $demo-primary,
+      accent: $demo-accent,
+      warn: $demo-warn,
     ),
   )
 );
@@ -32,7 +32,7 @@ $ng-mat-nav-theme: mat.define-light-theme(
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes($ng-mat-nav-theme);
+@include mat.all-component-themes($demo-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
@@ -46,11 +46,11 @@ body {
 }
 
 // This is meant to highlight the active route on the sidenav of navigation.component
-// TODO: Can this somehow be moved to the component's scss file? (NavigationComponent)
+// TODO: Can this somehow be moved to the component's scss file?  (NavigationComponent)
 .list-item-active {
   font-weight: bold;
   background: rgba(0, 0, 0, 0.04) !important;
   span span {
-    color: mat.get-color-from-palette($ng-mat-nav-accent, darker) !important;
+    color: mat.get-color-from-palette($demo-accent, darker) !important;
   }
 }
