add edit board functionality + minor fixes

--- a/projects/components/src/lib/delete-button/delete-button.component.html
+++ b/projects/components/src/lib/delete-button/delete-button.component.html
@@ -2,7 +2,10 @@
         color="warn"
         (click)="canDelete ? deleteBoard() : prepareForDelete()">
   <mat-icon>delete</mat-icon>
-  <span *ngIf="canDelete">confirm</span>
+  <span *ngIf="canDelete; else deleteTxt">confirm</span>
+  <ng-template #deleteTxt>
+    <span>Delete</span>
+  </ng-template>
 </button>
 
 <button *ngIf="canDelete"
