--- a/src/app/kanban/board-dialog/board-dialog.component.html
+++ b/src/app/kanban/board-dialog/board-dialog.component.html
@@ -11,8 +11,8 @@
   <button mat-button
           (click)="onNoClick()">Cancel</button>
   <button mat-button
-          [mat-dialog-close]="data.title"
+          [mat-dialog-close]="data"
           cdkFocusInitial>
-    Create
+    {{data.isNew ? 'Create' : 'Save'}}
   </button>
 </div>
