--- a/src/app/kanban/board/board.component.html
+++ b/src/app/kanban/board/board.component.html
@@ -18,7 +18,7 @@
       <div class="inner-card"
            cdkDrag
            *ngFor="let task of board.tasks; let i = index"
-           (click)="openDialog(task, i)">
+           (click)="openTaskDialog(task, i)">
         <mat-card [ngClass]="task.label">
           <mat-card-content>{{ task.description }}</mat-card-content>
         </mat-card>
@@ -27,11 +27,14 @@
     </div>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-stroked-button
-            (click)="openDialog()">
+    <button mat-icon-button
+            (click)="openTaskDialog()">
       <mat-icon>add</mat-icon>
     </button>
-
+    <button mat-icon-button
+            (click)="openEditDialog()">
+      <mat-icon>edit</mat-icon>
+    </button>
     <lib-delete-button (delete)="handleDelete()"></lib-delete-button>
   </mat-card-actions>
 </mat-card>
