--- a/src/app/kanban/task-dialog/task-dialog.component.html
+++ b/src/app/kanban/task-dialog/task-dialog.component.html
@@ -11,9 +11,9 @@
                            [(ngModel)]="data.task.label">
     <mat-button-toggle *ngFor="let opt of labelOptions"
                        [value]="opt">
-      <mat-icon [ngClass]="opt">{{
-        opt === 'gray' ? 'check_circle' : 'lens'
-        }}</mat-icon>
+      <mat-icon [ngClass]="opt">
+        {{opt === 'gray' ? 'check_circle' : 'lens'}}
+      </mat-icon>
     </mat-button-toggle>
   </mat-button-toggle-group>
 </div>
