enable offline and change board subscription to signal

--- a/src/app/kanban/board-list/board-list.component.html
+++ b/src/app/kanban/board-list/board-list.component.html
@@ -3,7 +3,7 @@
      class="boards"
      (cdkDropListDropped)="drop($event)">
   <app-board cdkDrag
-             *ngFor="let board of boards"
+             *ngFor="let board of boards()"
              [board]="board">
     <mat-icon cdkDragHandle
               class="handle">drag_indicator</mat-icon>
